--- a/assets/scss/generalStyles/_nav.scss
+++ b/assets/scss/generalStyles/_nav.scss
@@ -313,11 +313,6 @@
     height: 24rem;
   }
 
-  .nav__bottom {
-    position: relative;
-    z-index: -1;
-  }
-
   #top__left {
     transform-origin: top left;
     transition: all .3s;
